@@ -944,7 +944,9 @@ xfrd_tcp_pipe_release(xfrd_tcp_set_t* set, struct xfrd_tcp_pipeline* tp,
 	(void)rbtree_delete(xfrd->tcp_set->pipetree, &tp->node);
 
 	/* a waiting zone can use the free tcp slot (to another server) */
-	if(set->tcp_count == XFRD_MAX_TCP && set->tcp_waiting_first) {
+	/* if that zone fails to set-up or connect, we try to start the next
+	 * waiting zone in the list */
+	while(set->tcp_count == XFRD_MAX_TCP && set->tcp_waiting_first) {
 		int i;
 
 		/* pop first waiting process */
@@ -952,15 +954,16 @@ xfrd_tcp_pipe_release(xfrd_tcp_set_t* set, struct xfrd_tcp_pipeline* tp,
 		/* start it */
 		assert(zone->tcp_conn == -1);
 		zone->tcp_conn = conn;
+		tcp_zone_waiting_list_popfirst(set, zone);
 
 		/* stop udp (if any) */
 		if(zone->zone_handler.ev_fd != -1)
 			xfrd_udp_release(zone);
 		if(!xfrd_tcp_open(set, tp, zone)) {
 			zone->tcp_conn = -1;
-			set->tcp_count --;
 			xfrd_set_refresh_now(zone);
-			return;
+			/* try to start the next zone (if any) */
+			continue;
 		}
 		/* re-init this tcppipe */
 		/* ip and ip_len set by tcp_open */
@@ -976,15 +979,15 @@ xfrd_tcp_pipe_release(xfrd_tcp_set_t* set, struct xfrd_tcp_pipeline* tp,
 
 		/* insert into tree */
 		(void)rbtree_insert(set->pipetree, &tp->node);
-		/* succeeded? remove zone from lists and setup write */
+		/* setup write */
 		xfrd_unset_timer(zone);
-		tcp_zone_waiting_list_popfirst(set, zone);
 		pipeline_setup_new_zone(set, tp, zone);
+		/* started a task, no need for cleanups, so return */
+		return;
 	}
-	else {
-		assert(!set->tcp_waiting_first);
-		set->tcp_count --;
-		assert(set->tcp_count >= 0);
-	}
+	/* no task to start, cleanup */
+	assert(!set->tcp_waiting_first);
+	set->tcp_count --;
+	assert(set->tcp_count >= 0);
 }
 
